<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.ktu.ScreenShotAnalyser</groupId>
	<artifactId>ScreenShotAnalyser</artifactId>
	<version>1.0.1</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>18</maven.compiler.source>
		<maven.compiler.target>18</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>18</source>
					<target>18</target>
					<release>18</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>assemble-all</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>edu.ktu.screenshotanalyser.ScreenShotAnalyser</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
  
	<dependencies>
		<dependency>
			<groupId>org.languagetool</groupId>
			<artifactId>language-all</artifactId>
			<version>5.9</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.7</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.6</version>
		</dependency>

		<dependency>
			<groupId>org.openpnp</groupId>
			<artifactId>opencv</artifactId>
			<version>4.3.0-2</version>
		</dependency>

		<dependency>
			<groupId>net.sourceforge.tess4j</groupId>
			<artifactId>tess4j</artifactId>
			<version>5.4.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.opennlp</groupId>
			<artifactId>opennlp-tools</artifactId>
			<version>2.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>12.2.0.jre11</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>2.15.0-rc3</version>
		</dependency>

		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.8.0</version>
		</dependency>

		<dependency>
			<groupId>com.github.pemistahl</groupId>
			<artifactId>lingua</artifactId>
			<version>1.2.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
			<version>1.28.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-langdetect</artifactId>
			<version>1.28.2</version>
		</dependency>

		<dependency>
			<groupId>net.dongliu</groupId>
			<artifactId>apk-parser</artifactId>
			<version>2.6.10</version>
		</dependency>

<!--		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>4.2.2</version>
			<type>pom</type>
		</dependency> -->

		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.5.13.3</version>
		</dependency>

		<dependency>
			<groupId>net.sourceforge.javaocr</groupId>
			<artifactId>javaocr-core</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>com.github.downgoon</groupId>
			<artifactId>MarvinPlugins</artifactId>
			<version>1.5.5</version>
		</dependency>

		<dependency>
			<groupId>com.github.downgoon</groupId>
			<artifactId>MarvinFramework</artifactId>
			<version>1.5.5</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.9.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.sejda.imageio</groupId>
			<artifactId>webp-imageio</artifactId>
			<version>0.1.6</version>
		</dependency>



<!-- broken	<dependency>
			<groupId>com.aliasi</groupId>
			<artifactId>lingpipe</artifactId>
			<version>4.1.2</version>
		</dependency> -->

<!--
		<dependency>
			<groupId>com.github.spullara.cli-parser</groupId>
			<artifactId>cli-parser</artifactId>
			<version>1.1.2</version>
		</dependency>

		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.9.1</version>
		</dependency>

		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.9.1</version>
			<classifier>models</classifier>
		</dependency>

		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-parser</artifactId>
			<version>3.9.1</version>
		</dependency>

		<dependency>
			<groupId>net.sf.extjwnl</groupId>
			<artifactId>extjwnl</artifactId>
			<version>1.9.4</version>
		</dependency>

		<dependency>
			<groupId>net.sf.extjwnl</groupId>
			<artifactId>extjwnl-data-wn31</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
			<artifactId>de.tudarmstadt.ukp.dkpro.core.readability-asl</artifactId>
			<version>1.9.2</version>
		</dependency>

		<dependency>
			<groupId>org.boofcv</groupId>
			<artifactId>boofcv-core</artifactId>
			<version>0.30</version>
		</dependency>

		<dependency>
			<groupId>org.tensorflow</groupId>
			<artifactId>tensorflow</artifactId>
			<version>1.11.0</version>
		</dependency>
  	
		<dependency>
			<groupId>org.tensorflow</groupId>
			<artifactId>libtensorflow</artifactId>
			<version>1.11.0</version>
		</dependency>

		<dependency>
			<groupId>org.tensorflow</groupId>
			<artifactId>libtensorflow_jni_gpu</artifactId>
			<version>1.11.0</version>
		</dependency>
-->




<!-- https://mvnrepository.com/artifact/org.openimaj/core-image -->
<dependency>
    <groupId>org.openimaj</groupId>
    <artifactId>core-image</artifactId>
    <version>1.3.10</version>

<exclusions>
            <exclusion>
                <groupId>xml-apis</groupId>
                <artifactId>xml-apis</artifactId>
            </exclusion>
            <exclusion>
                <groupId>xml-apis</groupId>
                <artifactId>xml-apis-ext</artifactId>
            </exclusion>

            <exclusion>
    <groupId>batik</groupId>
    <artifactId>batik-ext</artifactId>
            </exclusion>

            <exclusion>
            	<groupId>org.apache.xmlgraphics</groupId>
            	<artifactId>batik-ext</artifactId>
            </exclusion>
</exclusions>

</dependency>




<!-- https://mvnrepository.com/artifact/org.jdom/jdom2 -->
<dependency>
    <groupId>org.jdom</groupId>
    <artifactId>jdom2</artifactId>
    <version>2.0.6.1</version>
</dependency>


<!-- https://mvnrepository.com/artifact/org.openimaj/image-feature-extraction -->
<dependency>
    <groupId>org.openimaj</groupId>
    <artifactId>image-feature-extraction</artifactId>
    <version>1.3.10</version>

<exclusions>

            <exclusion>
    <groupId>batik</groupId>
    <artifactId>batik-ext</artifactId>
            </exclusion>

            <exclusion>
            	<groupId>org.apache.xmlgraphics</groupId>
            	<artifactId>batik-ext</artifactId>
            </exclusion>
</exclusions>


</dependency>



<!-- https://mvnrepository.com/artifact/org.openimaj/image-processing -->
<dependency>
    <groupId>org.openimaj</groupId>
    <artifactId>image-processing</artifactId>
    <version>1.3.10</version>
</dependency>


<dependency>
    <groupId>org.openimaj</groupId>
    <artifactId>image-local-features</artifactId>
    <version>1.3.10</version>
</dependency>



<dependency>
    <groupId>org.openimaj</groupId>
    <artifactId>core-math</artifactId>
    <version>1.3.10</version>
</dependency>


<dependency>
    <groupId>com.zaxxer</groupId>
    <artifactId>HikariCP</artifactId>
    <version>5.0.1</version>
</dependency>




<!--

<dependency>
	<artifactId>image-processing</artifactId>
	<groupId>org.openimaj</groupId>
	<version>1.3.10</version>
	<scope>compile</scope>
</dependency>
-->



	</dependencies>


</project>
